   -- Started work on getting rid of the hardcoded enums.  Battle Items,
      Weapons, Armors, Mounts and Men are now done, as are Effects, Specials,
      and Ranges.  They are now completely looked up based on a unique text
      key to find the one desired.
   -- Fixed a small goof in the grow races code (a race (I_VIKING for example)
      was being used as an index into the ManDefs array.  This worked fine for
      the 'base' races, but would have failed on any of the extended ones.
   -- Fixed bug in transport which didn't prevent the use of incomplete
      transport structures.
   -- Added Tony Briggs <abriggs@iinet.net.au> COASTAL_FISH patch.
   -- Initial cut at 'attribute' and hooking them up to skills/items/unit
      flags which modify them.  This will hopefully get rid of some of the
      hackishness with some hardcoded skills.
   -- Fixed riding check in GetAttackRiding to use the lowest weight man
      in the unit (for races which are not 'normal weight')
   -- Attributes now handle monsters as well, and there is a PracticeAttribute
      which knows how to practice skills which modify attributes.  This gets
      rid of the majority of places where COMB, OBSE, STEA, and TACT were
      used raw in the code!
   -- Cleaned up NotifySpell so it's generic.
   -- Items now have a max_inventory value.  This lets us ensure no more than
      one balrog per unit nicely, and we can limit arbitrary items if we want.
   -- The monster escape code is now much more generic.  Still not 100% great
      but better than it was!
   -- Lots of uses of I_LEADER replaced with a type flag IT_LEADER.  There
      are still some, but the groundwork for multiple leader races is getting
      there.
   -- Changed USE_PREPARE slightly.  There is now a 'strict' and a 'normal'
      setting for USE_PREPARE.  Under strict, the READY command MUST be
      used or the unit will not use any battle items.  Under normal, the
      unit will fall back on the battle items list.
