@@ -197,7 +197,7 @@ static GameDefs g = {
 	10,	// UPKEEP_FOOD_VALUE
 	0,	// PREVENT_SAIL_THROUGH
 	0,	// ALLOW_TRIVIAL_PORTAGE
-	3,  // GATES_NOT_PERENNIAL
+	0,  // GATES_NOT_PERENNIAL
 	0,  // START_GATES_OPEN
 	0,  // SHOW_CLOSED_GATES
 	0,	// TRANSPORT
